src/test/ui/error-codes/E0511.stderr
error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/E0511.rs:18:14
   |
18 |     unsafe { simd_add(0, 1); } //~ ERROR E0511
   |              ^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0511"
